Clean up greeting

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -54,51 +54,10 @@
       </div>
     </nav>
 
-    <!-- <nav
-      class="navbar navbar-right navbar-expand-md fixed-top bg-dark border-bottom"
-      aria-label="Borkfolio navigation header"
-    >
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler collapsed justify-content-center"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-          aria-controls="navbarCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div
-          class="navbar-collapse collapse justify-content-center"
-          id="navbarCollapse"
-        >
-          <ul class="navbar-nav ms-3 mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/"> Home </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about">
-                Site Info
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/docs">
-                API Docs
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-
     <main role="main">
       <div class="container">
-        <div class="mt-md-3 mt-lg-4 mt-xxl-5 pt-3 pt-lg-4 pt-xxl-4"></div>
-        <div class="mt-md-3 mt-lg-4 mt-xxl-5 pt-3 pt-lg-4 pt-xxl-4"></div>
+        <div class="mt-md-3 mt-lg-4 mt-xxl-3 pt-3 pt-lg-4 pt-xxl-4"></div>
+        <div class="mt-md-3 mt-lg-4 mt-xxl-3 pt-3 pt-lg-4 pt-xxl-4"></div>
 
         <div class="row">
           <div
@@ -106,10 +65,13 @@
           >
             <div class="col-sm-9 p-lg-5 mx-auto mt-5">
               <div class="card">
-                <h1 class="card-header display-4 fw-normal">Matthew Ashley</h1>
-                <p class="card-body lead fw-normal">
-                  Senior software developer at Lumen Technologies specializing
-                  in back-end development and process automation
+                <h1 class="card-header display-4 fw-normal">Welcome!</h1>
+                <div class="card-body border-bottom">
+                  <h1>My name is:</h1>
+                  <h1>Matthew Ashley</h1>
+                </div>
+                <p class="card-body" style="margin-bottom: 0">
+                  Senior software developer at Lumen Technologies
                 </p>
               </div>
             </div>
@@ -184,19 +146,6 @@
                   code reviews, technical interviews, database management,
                   reporting, and everything in between.
                 </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row justify-content-center mt-5">
-          <div class="col col-sm-8 col-md-6 col-lg-5">
-            <div class="card align-middle mx-auto">
-              <h1 class="card-header text-center">Matthew Ashley</h1>
-
-              <div class="card-body text-center">
-                Senior software developer at Lumen Technologies specializing in
-                back-end development and process automation
               </div>
             </div>
           </div>
