--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -63,7 +63,7 @@
           <div
             class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
           >
-            <div class="col-sm-9 p-lg-5 mx-auto mt-5">
+            <div class="col-sm-10 col-lg-7 p-lg-5 mx-auto mt-5">
               <div class="card">
                 <h1 class="card-header display-4 fw-normal">Welcome!</h1>
                 <div class="card-body border-bottom">
@@ -78,7 +78,7 @@
           </div>
         </div>
 
-        <div class="row justify-content-center mt-5">
+        <div class="row my-5 justify-content-center">
           <div class="col col-md-10">
             <div class="card mx-auto">
               <h4 class="text-center card-header">About Me</h4>
@@ -151,7 +151,7 @@
           </div>
         </div>
 
-        <div class="row mt-5 justify-content-center">
+        <div class="row my-5 justify-content-center">
           <h4 class="text-center">Tech Deck</h4>
 
           <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
@@ -209,8 +209,8 @@
           </div>
         </div>
 
-        <div class="row justify-content-center">
-          <h4 class="text-center my-5">Interests</h4>
+        <div class="row my-5 justify-content-center">
+          <h4 class="text-center">Interests</h4>
 
           <div class="col-lg-3">
             <div class="card mx-auto my-3" style="width: 14rem">
