--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -56,19 +56,18 @@
 
     <main role="main">
       <div class="container">
-        <div class="mt-md-3 mt-lg-4 mt-xxl-3 pt-3 pt-lg-4 pt-xxl-4"></div>
-        <div class="mt-md-3 mt-lg-4 mt-xxl-3 pt-3 pt-lg-4 pt-xxl-4"></div>
+        <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
+        <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
 
-        <div class="row">
+        <div class="row my-5">
           <div
             class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
           >
-            <div class="col-sm-10 col-lg-7 p-lg-5 mx-auto mt-5">
+            <div class="col-sm-10 col-lg-7 col-xxl-6 pt-lg-5 mx-auto">
               <div class="card">
                 <h1 class="card-header display-4 fw-normal">Welcome!</h1>
                 <div class="card-body border-bottom">
-                  <h1>My name is:</h1>
-                  <h1>Matthew Ashley</h1>
+                  <h2>My name is Matthew Ashley</h2>
                 </div>
                 <p class="card-body" style="margin-bottom: 0">
                   Senior software developer at Lumen Technologies
@@ -78,7 +77,7 @@
           </div>
         </div>
 
-        <div class="row my-5 justify-content-center">
+        <div class="row mb-5 justify-content-center">
           <div class="col col-md-10">
             <div class="card mx-auto">
               <h4 class="text-center card-header">About Me</h4>
@@ -151,7 +150,7 @@
           </div>
         </div>
 
-        <div class="row my-5 justify-content-center">
+        <div class="row mb-3 justify-content-center">
           <h4 class="text-center">Tech Deck</h4>
 
           <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
@@ -209,18 +208,18 @@
           </div>
         </div>
 
-        <div class="row my-5 justify-content-center">
-          <h4 class="text-center">Interests</h4>
+        <div class="row mb-5 justify-content-center">
+          <h4 class="text-center mb-4">Interests</h4>
 
           <div class="col-lg-3">
-            <div class="card mx-auto my-3" style="width: 14rem">
+            <div class="card mx-auto mb-3" style="width: 14rem">
               <i
                 class="bi bi-joystick card-image-top text-center"
                 style="font-size: 5rem"
               ></i>
 
               <div class="card-body">
-                <h5 class="card-title text-center mb-3">Video Games</h5>
+                <h5 class="card-title text-center">Video Games</h5>
 
                 <p class="card-text">
                   From retro to cutting edge, I love encountering unique and
@@ -231,7 +230,7 @@
           </div>
 
           <div class="col-lg-3">
-            <div class="card mx-auto my-3" style="width: 14rem">
+            <div class="card mx-auto mb-3" style="width: 14rem">
               <i
                 class="bi bi-dice-3-fill card-image-top text-center"
                 style="font-size: 5rem"
@@ -249,7 +248,7 @@
           </div>
 
           <div class="col-lg-3">
-            <div class="card mx-auto my-3" style="width: 14rem">
+            <div class="card mx-auto" style="width: 14rem">
               <i
                 class="bi bi-tools card-image-top text-center"
                 style="font-size: 5rem"
