--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -59,7 +59,7 @@
         <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
         <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
 
-        <div class="row my-5">
+        <div class="row">
           <div
             class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
           >
