Consolidate html endpoints

--- a/src/app/templates/about.html
+++ b/src/app/templates/about.html
@@ -68,17 +68,20 @@
                 <div class="col-12"></div>
 
                 <p>
-                  When I sat down to create this site, I had 3 goals in mind:
+                  When I sat down to create this site, I had a few goals in
+                  mind:
                 </p>
 
                 <ul>
                   <li>
-                    Give the reader some insight into who I am what motivates me
+                    Give the reader some insight into who I am and what
+                    motivates me
                   </li>
                   <li>
                     Refresh myself on API creation and implementation in Python
                   </li>
                   <li>Deploy the site onto an Amazon Web Services instance</li>
+                  <li>Have some (timetable-conscious) fun with it</li>
                 </ul>
 
                 <p>
