Adjust for cleaner responsive look

--- a/src/app/templates/about.html
+++ b/src/app/templates/about.html
@@ -62,7 +62,7 @@
         <div class="row mb-3 justify-content-center">
           <div class="col col-md-10 col-lg-8 col-xxl-6">
             <div class="card mx-auto">
-              <h4 class="text-center card-header">About This Site</h4>
+              <h2 class="text-center card-header">About This Site</h2>
 
               <div class="card-body">
                 <div class="col-12"></div>
@@ -74,11 +74,10 @@
 
                 <ul>
                   <li>
-                    Give the reader some insight into who I am and what
-                    motivates me
+                    Give the reader some insight into who I am
                   </li>
                   <li>
-                    Refresh myself on API creation and implementation in Python
+                    Refresh myself on API implementation in Python
                   </li>
                   <li>Deploy the site onto an Amazon Web Services instance</li>
                   <li>Have some (timetable-conscious) fun with it</li>
