--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -56,9 +56,6 @@
 
     <main role="main">
       <div class="container">
-        <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
-        <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
-
         <div class="row">
           <div
             class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
@@ -127,18 +124,33 @@
 
                 <p>
                   In 2017 a small group of friends and I decided to pursue our
-                  shared interest in game development, and we founded an LLC by
-                  the name of tinyEnt. We used our free time to develop our
-                  first creation - a free game written in Unity with both
-                  endless runner and shoot-em-up elements titled "Creamed".
+                  shared interest in game development, and we founded an LLC -
+                  <a
+                    target="_blank"
+                    style="text-decoration: none"
+                    href="https://www.tinyent.com/"
+                    ><strong>tinyEnt Studios</strong></a
+                  >. We used our free time to develop our first creation - a
+                  free game written in Unity with both endless runner and
+                  shoot-em-up elements titled
+                  <a
+                    target="_blank"
+                    style="text-decoration: none"
+                    href="https://www.tinyent.com/creamed"
+                    ><strong>Creamed</strong></a
+                  >.
                 </p>
-
                 <p>
-                  In late 2017 I secured a software developer position at Lumen
-                  Technologies, in a small group focused on business process
-                  improvement and automation. The team has grown substantially
-                  since I first joined, and I've contributed numerous
-                  improvements to our workflow over the years - from
+                  In late 2017 I secured a software developer position at
+                  <a
+                    target="_blank"
+                    style="text-decoration: none"
+                    href="https://www.lumen.com/en-us/about.html"
+                    ><strong>Lumen Technologies</strong></a
+                  >, in a small group focused on business
+                  process improvement and automation. The team has grown
+                  substantially since I first joined, and I've contributed
+                  numerous improvements to our workflow over the years - from
                   implementation of automation health alert notifications to the
                   design of a robust and resilient framework optimized for our
                   team's needs. Today, I handle new projects, team mentoring,
@@ -261,6 +273,147 @@
                   I run an assortment of utility applications on my local
                   network using a Synology DS920.
                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mb-5 justify-content-center">
+          <h4 class="text-center mb-4">Interests</h4>
+
+          <div class="col-md-12 col-lg-8">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseVideoGames"
+                    aria-expanded="false"
+                    aria-controls="collapseVideoGames"
+                  >
+                    <i
+                      class="bi bi-joystick me-2"
+                      style="font-size: 2rem; color: cornflowerblue"
+                    ></i>
+                    <h5 class="ms-2 mb-0">Video Games</h5>
+                  </button>
+                </h2>
+                <div
+                  id="collapseVideoGames"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      While I would consider myself generally well-rounded in
+                      terms of game genre experience, I tend to gravitate
+                      towards
+                      <a
+                        href="https://steamcommunity.com/profiles/76561198057714879/games/?tab=all&sort=playtime"
+                        target="_blank"
+                        style="text-decoration: none"
+                        ><strong>skill-oriented multiplayer games</strong></a
+                      >. Nothing quite compares to the feeling of overcoming a
+                      formidable challenge through well-orchestrated teamwork.
+                    </p>
+                    <p class="mb-0">
+                      I love encountering unique and innovative game design.
+                      Such events are usually accompanied by a hype-filled
+                      discussion of potential use cases and past experiences
+                      with similar implementations.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseBoardGames"
+                    aria-expanded="false"
+                    aria-controls="collapseBoardGames"
+                  >
+                    <i
+                      class="bi bi-dice-3-fill me-2"
+                      style="font-size: 2rem; color: cornflowerblue"
+                    ></i>
+                    <h5 class="ms-2 mb-0">Tabletop Games</h5>
+                  </button>
+                </h2>
+                <div
+                  id="collapseBoardGames"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Our board game library occupies a significant portion of our
+                    living room wall space.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <div class="d-block text-center">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseHomeLab"
+                      aria-expanded="false"
+                      aria-controls="collapseHomeLab"
+                    >
+                      <i
+                        class="bi bi-tools me-2"
+                        style="font-size: 2rem; color: cornflowerblue"
+                      ></i>
+                      <h5 class="ms-2 mb-0">Home Lab</h5>
+                    </button>
+                  </div>
+                </h2>
+                <div
+                  id="collapseHomeLab"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Around 2015-2016 I jumped through the hoops of Cisco
+                      networking certification, expecting to follow a career
+                      path of network engineering. I used that knowledge to wire
+                      up Ethernet connections in my first home, and ended up
+                      with a closet dedicated to a server rack and networking
+                      equipment.
+                    </p>
+                    <p>
+                      Later on, I installed a NAS server running a custom Linux
+                      distro, maxed out the RAM, and began using that machine to
+                      run an assortment of utility applications via Docker.
+                    </p>
+                    <p class="mb-0">Currently running apps include:</p>
+                    <ul>
+                      <li>Data Backup Services</li>
+                      <li>DNS Server</li>
+                      <li>VPN Server</li>
+                      <li>GitHub Clone</li>
+                      <li>Media Server</li>
+                      <li>Docker Management Dashboard</li>
+                    </ul>
+                    <p>
+                      I've been especially fond of the GitHub clone (<strong
+                        ><a
+                          style="text-decoration: none"
+                          href="https://about.gitea.com/"
+                          target="_blank"
+                          >Gitea</a
+                        ></strong
+                      >) recently.
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
