Update content phrasing

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -147,15 +147,15 @@
                     style="text-decoration: none"
                     href="https://www.lumen.com/en-us/about.html"
                     ><strong>Lumen Technologies</strong></a
-                  >, in a small group focused on business
-                  process improvement and automation. The team has grown
-                  substantially since I first joined, and I've contributed
-                  numerous improvements to our workflow over the years - from
-                  implementation of automation health alert notifications to the
-                  design of a robust and resilient framework optimized for our
-                  team's needs. Today, I handle new projects, team mentoring,
-                  code reviews, technical interviews, database management,
-                  reporting, and everything in between.
+                  >, in a small group focused on business process improvement
+                  and automation. The team has grown substantially since I first
+                  joined, and I've contributed numerous improvements to our
+                  workflow over the years - from implementation of automation
+                  health alert notifications to the design of a robust and
+                  resilient framework optimized for our team's needs. Today, I
+                  handle new projects, team mentoring, code reviews, technical
+                  interviews, database management, reporting, and everything in
+                  between.
                 </p>
               </div>
             </div>
@@ -315,8 +315,9 @@
                         target="_blank"
                         style="text-decoration: none"
                         ><strong>skill-oriented multiplayer games</strong></a
-                      >. Nothing quite compares to the feeling of overcoming a
-                      formidable challenge through well-orchestrated teamwork.
+                      >. Nothing quite compares to the triumphant feeling of
+                      overcoming a formidable challenge through
+                      well-orchestrated teamwork.
                     </p>
                     <p class="mb-0">
                       I love encountering unique and innovative game design.
@@ -385,7 +386,7 @@
                       networking certification, expecting to follow a career
                       path of network engineering. I used that knowledge to wire
                       up Ethernet connections in my first home, and ended up
-                      with a closet dedicated to a server rack and networking
+                      dedicating a closet to a server rack and networking
                       equipment.
                     </p>
                     <p>
