--- a/src/app/templates/boardgames.html
+++ b/src/app/templates/boardgames.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="/static/css/custom.css"
+      href="/static/css/boardgames.css"
     />
   </head>
 
@@ -116,7 +116,7 @@
                         <th scope="col">Year</th>
                       </tr>
                     </thead>
-                    <tbody id="boardgame-table"></tbody>
+                    <tbody id="bgCollectionTable"></tbody>
                   </table>
                   <p class="mb-0 text-center text-muted">
                     Data provided by the BoardGameGeek API
@@ -148,10 +148,10 @@
                   data-bs-parent="#interestsAccordion"
                 >
                   <div class="accordion-body">
-                    <form id="bgsearch-form" action="/api/boardgames/search">
+                    <form id="bgSearchForm">
                       <label for="name">Board Game Name</label><br />
-                      <input type="text" name="name" /><br /><br />
-                      <input type="submit" value="Submit" />
+                      <input type="text" name="name" />
+                      <input type="submit" value="Search" />
                     </form>
                     <table
                       class="table table-striped table-hover accordion-body mb-0"
@@ -163,8 +163,16 @@
                           <th scope="col">Year</th>
                         </tr>
                       </thead>
-                      <tbody id="searchResultTable"></tbody>
+                      <tbody id="bgSearchResultTable"></tbody>
                     </table>
+                    <form class="mt-3" id="bgSuggestForm">
+                      <input
+                        id="submitSuggestion"
+                        disabled
+                        type="submit"
+                        value="Send Suggestion"
+                      />
+                    </form>
                   </div>
                 </div>
               </div>
