--- a/src/app/templates/boardgames.html
+++ b/src/app/templates/boardgames.html
@@ -47,9 +47,6 @@
               <a class="nav-link" href="/about">About Site</a>
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link active" href="/boardgames">Board Games</a>
-            </li>
-            <li class="nav-item text-center">
               <a class="nav-link" href="/docs">API Docs</a>
             </li>
           </ul>
@@ -62,25 +59,6 @@
         <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
         <div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
 
-        <div class="row mb-3 justify-content-center">
-          <div class="col col-md-10 col-lg-8 col-xxl-6">
-            <div class="card mx-auto">
-              <h2 class="text-center card-header">Board Games</h2>
-
-              <div class="card-body">
-                <div class="col-12"></div>
-
-                <p class="mb-0">
-                  I prefer games that allow me to socialize while playing, and
-                  board games generally excel in that role. We've built up a
-                  modest library of games over the years, most of which you can
-                  find in the table below.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="row mb-5 justify-content-center">
           <div class="col-md-12 col-lg-8">
             <div class="accordion" id="boardgameAccordion">
@@ -90,21 +68,20 @@
                     class="accordion-button collapsed"
                     type="button"
                     data-bs-toggle="collapse"
-                    data-bs-target="#collapseBoardGames"
+                    data-bs-target="#collapseBgCollection"
                     aria-expanded="false"
-                    aria-controls="collapseBoardGames"
+                    aria-controls="collapseBgCollection"
                   >
                     <i
                       class="bi bi-dice-3-fill me-2"
                       style="font-size: 2rem; color: cornflowerblue"
                     ></i>
-                    <h5 class="ms-2 mb-0">Current Board Game Collection</h5>
+                    <h5 class="ms-2 mb-0">See Current Collection</h5>
                   </button>
                 </h2>
                 <div
-                  id="collapseBoardGames"
+                  id="collapseBgCollection"
                   class="accordion-collapse collapse"
-                  data-bs-parent="#boardgameAccordion"
                 >
                   <table
                     class="table table-striped table-hover accordion-body mb-0"
@@ -130,23 +107,19 @@
                       class="accordion-button collapsed"
                       type="button"
                       data-bs-toggle="collapse"
-                      data-bs-target="#collapseHomeLab"
+                      data-bs-target="#collapseBgSearch"
                       aria-expanded="false"
-                      aria-controls="collapseHomeLab"
+                      aria-controls="collapseBgSearch"
                     >
                       <i
-                        class="bi bi-tools me-2"
+                        class="bi bi-send-plus-fill me-2"
                         style="font-size: 2rem; color: cornflowerblue"
                       ></i>
-                      <h5 class="ms-2 mb-0">Want To Recommend A Game?</h5>
+                      <h5 class="ms-2 mb-0">Recommend A Game</h5>
                     </button>
                   </div>
                 </h2>
-                <div
-                  id="collapseHomeLab"
-                  class="accordion-collapse collapse"
-                  data-bs-parent="#interestsAccordion"
-                >
+                <div id="collapseBgSearch" class="accordion-collapse collapse">
                   <div class="accordion-body">
                     <form id="bgSearchForm">
                       <label for="name">Board Game Name</label><br />
@@ -173,6 +146,48 @@
                         value="Send Suggestion"
                       />
                     </form>
+                    <div class="mb-0 text-center text-muted">
+                      Data provided by the BoardGameGeek API
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <div class="d-block text-center">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseBgSuggestions"
+                      aria-expanded="false"
+                      aria-controls="collapseBgSuggestions"
+                    >
+                      <i
+                        class="bi bi-search me-2"
+                        style="font-size: 2rem; color: cornflowerblue"
+                      ></i>
+                      <h5 class="ms-2 mb-0">Peek The Recommendations</h5>
+                    </button>
+                  </div>
+                </h2>
+                <div
+                  id="collapseBgSuggestions"
+                  class="accordion-collapse collapse"
+                >
+                  <div class="accordion-body">
+                    <table
+                      class="table table-striped table-hover accordion-body mb-0"
+                    >
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Name</th>
+                          <th scope="col">Year</th>
+                        </tr>
+                      </thead>
+                      <tbody id="bgSuggestionsTable"></tbody>
+                    </table>
                   </div>
                 </div>
               </div>
