Update board games interests content

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -293,9 +293,13 @@
                   data-bs-parent="#interestsAccordion"
                 >
                   <div class="accordion-body">
-                    Our board game library occupies a significant portion of our
-                    living room wall space.
-                    <a href="/boardgames">Have a suggestion?</a>
+                    I prefer games that allow me to socialize while playing, and
+                    board games generally excel in that role. If you're
+                    interested in checking out the collection - or maybe even
+                    dropping a game suggestion - check out
+                    <a href="/boardgames" style="text-decoration: none"
+                      ><b>this page</b></a
+                    >.
                   </div>
                 </div>
               </div>
