--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -58,7 +58,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
+            class="position-relative overflow-hidden pb-3 pb-md-5 m-md-3 text-center"
           >
             <div class="col-sm-10 col-lg-7 col-xxl-6 pt-lg-5 mx-auto">
               <div class="card">
