--- a/src/app/templates/boardgames.html
+++ b/src/app/templates/boardgames.html
@@ -146,7 +146,9 @@
                         value="Send Suggestion"
                       />
                     </form>
-                    <div class="mb-0 text-center text-muted">
+                    <div
+                      class="mt-3 mb-0 pt-3 border-top text-center text-muted"
+                    >
                       Data provided by the BoardGameGeek API
                     </div>
                   </div>
@@ -184,6 +186,7 @@
                           <th scope="col">#</th>
                           <th scope="col">Name</th>
                           <th scope="col">Year</th>
+                          <th scope="col">Count</th>
                         </tr>
                       </thead>
                       <tbody id="bgSuggestionsTable"></tbody>
