--- a/app/templates/about.html.j2
+++ b/app/templates/about.html.j2
@@ -60,8 +60,8 @@
       <h5 class="card-header text-center">Frameworks</h5>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">FastAPI</li>
+        <li class="list-group-item">Pydantic-XML</li>
         <li class="list-group-item">Jinja2</li>
-        <li class="list-group-item">Bootstrap5</li>
       </ul>
     </div>
   </div>
