--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -1,18 +1,16 @@
 {% extends "base.html.j2" %}
 {% block title %}Borkfolio - Home{% endblock %}
 {% block content %}
-<div class="row">
-  <div class="position-relative overflow-hidden pb-3 pb-md-5 m-md-3 text-center">
-    <div class="col-sm-10 col-lg-7 col-xxl-6 pt-lg-5 mx-auto">
-      <div class="card">
-        <h1 class="card-header display-4 fw-normal">Welcome!</h1>
-        <div class="card-body border-bottom">
-          <h2>My name is Matthew Ashley</h2>
-        </div>
-        <p class="card-body" style="margin-bottom: 0">
-          Senior software developer at Lumen Technologies
-        </p>
+<div class="row pb-3 pb-md-5 m-md-3 text-center justify-content-center">
+  <div class="col-sm-10 col-lg-7 col-xxl-6 pt-lg-5">
+    <div class="card mx-auto">
+      <h1 class="card-header display-4 fw-normal">Welcome!</h1>
+      <div class="card-body border-bottom">
+        <h2>My name is Matthew Ashley</h2>
       </div>
+      <p class="card-body" style="margin-bottom: 0">
+        Senior software developer at Lumen Technologies
+      </p>
     </div>
   </div>
 </div>
@@ -91,7 +89,7 @@
 <div class="row mb-3 justify-content-center">
   <h4 class="text-center">Tech Deck</h4>
 
-  <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+  <div class="col col-md-6 col-lg-3 col-xxl-2 my-4">
     <div class="card mx-auto" style="width: 12rem">
       <h5 class="card-header text-center">Languages</h5>
 
@@ -105,7 +103,7 @@
     </div>
   </div>
 
-  <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+  <div class="col col-md-6 col-lg-3 col-xxl-2 my-4">
     <div class="card mx-auto" style="width: 12rem">
       <h5 class="card-header text-center">Database</h5>
       <ul class="list-group list-group-flush">
@@ -118,7 +116,7 @@
     </div>
   </div>
 
-  <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+  <div class="col col-md-6 col-lg-3 col-xxl-2 my-4">
     <div class="card mx-auto" style="width: 12rem">
       <h5 class="card-header text-center">Software</h5>
       <ul class="list-group list-group-flush">
@@ -131,7 +129,7 @@
     </div>
   </div>
 
-  <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+  <div class="col col-md-6 col-lg-3 col-xxl-2 my-4">
     <div class="card mx-auto" style="width: 12rem">
       <h5 class="card-header text-center">Miscellaneous</h5>
 
