--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -1,7 +1,8 @@
 {% extends "base.html.j2" %}
 {% block title %}Borkfolio - Home{% endblock %}
 {% block content %}
-<div class="row pb-3 pb-md-5 m-md-3 text-center justify-content-center">
+<div class="row pb-5 m-3 text-center justify-content-center">
+  <div class="mt-5 mt-lg-0"></div>
   <div class="col-sm-10 col-lg-7 col-xxl-6 pt-lg-5">
     <div class="card mx-auto">
       <h1 class="card-header display-4 fw-normal">Welcome!</h1>
