--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row pb-5 m-3 text-center justify-content-center">
   <div class="mt-5 mt-lg-0"></div>
-  <div class="col-sm-10 col-lg-7 col-xxl-6 pt-lg-5">
+  <div class="col-sm-12 col-md-9 col-lg-7 col-xxl-6 pt-lg-5">
     <div class="card mx-auto">
       <h1 class="card-header display-4 fw-normal">Welcome!</h1>
       <div class="card-body border-bottom">
