--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -17,7 +17,7 @@
 <body>
 
   {% block navbar %}
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
