Adjust padding on welcome message

--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -6,7 +6,7 @@
   <div class="col-sm-12 col-md-9 col-lg-7 col-xxl-6 pt-lg-5">
     <div class="card mx-auto">
       <h1 class="card-header display-4 fw-normal">Welcome!</h1>
-      <div class="card-body border-bottom">
+      <div class="card-body border-bottom" style="padding-bottom:0">
         <h2>My name is Matthew Ashley</h2>
       </div>
       <p class="card-body" style="margin-bottom: 0">
