--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -5,8 +5,8 @@
   <div class="mt-5 mt-lg-0"></div>
   <div class="col-sm-12 col-md-9 col-lg-7 col-xxl-6 pt-lg-5">
     <div class="card mx-auto">
-      <h1 class="card-header display-4 fw-normal">Welcome!</h1>
-      <div class="card-body border-bottom" style="padding-bottom:0">
+      <h1 class="card-header display-4 fw-normal" style="border-bottom:none">Welcome!</h1>
+      <div class="card-body" style="padding-bottom:0">
         <h2>My name is Matthew Ashley</h2>
       </div>
       <p class="card-body" style="margin-bottom: 0">
@@ -87,8 +87,8 @@
   </div>
 </div>
 
-<div class="row mb-3 justify-content-center">
-  <h4 class="text-center">Tech Deck</h4>
+<div class="row mb-3 justify-content-center text-center">
+  <h4>Tech Deck</h4>
 
   <div class="col col-md-6 col-lg-3 col-xxl-2 my-4">
     <div class="card mx-auto" style="width: 12rem">
