Add aria-label attributes

--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -62,16 +62,18 @@
         <p>
           In 2017 a small group of friends and I decided to pursue our
           shared interest in game development, and we founded an LLC -
-          <a target="_blank" style="text-decoration: none" href="https://www.tinyent.com/"><strong>tinyEnt
+          <a target="_blank" aria-label="TinyEnt Website" style="text-decoration: none"
+            href="https://www.tinyent.com/"><strong>tinyEnt
               Studios</strong></a>. We used our free time to develop our first creation - a
           free game written in Unity with both endless runner and
           shoot-em-up elements titled
-          <a target="_blank" style="text-decoration: none"
+          <a target="_blank" aria-label="Creamed Game Webpage" style="text-decoration: none"
             href="https://www.tinyent.com/creamed"><strong>Creamed</strong></a>.
         </p>
         <p>
           In late 2017 I secured a software developer position at
-          <a target="_blank" style="text-decoration: none" href="https://www.lumen.com/en-us/about.html"><strong>Lumen
+          <a target="_blank" aria-label="About Lumen Website" style="text-decoration: none"
+            href="https://www.lumen.com/en-us/about.html"><strong>Lumen
               Technologies</strong></a>, in a small group focused on business process improvement
           and automation. The team has grown substantially since I first
           joined, and I've contributed numerous improvements to our
@@ -164,7 +166,8 @@
               While I would consider myself generally well-rounded in
               terms of game genre experience, I tend to gravitate
               towards
-              <a href="https://steamcommunity.com/profiles/76561198057714879/games/?tab=all&sort=playtime"
+              <a aria-label="Steam Profile Games By Playtime"
+                href="https://steamcommunity.com/profiles/76561198057714879/games/?tab=all&sort=playtime"
                 target="_blank" style="text-decoration: none"><strong>skill-oriented multiplayer games</strong></a>.
               Nothing quite compares to the triumphant feeling of
               overcoming a formidable challenge through
@@ -193,7 +196,7 @@
             board games generally excel in that role. If you're
             interested in checking out the collection - or maybe even
             dropping a game suggestion - check out
-            <a href="/boardgames" style="text-decoration: none"><b>this page</b></a>.
+            <a aria-label="Board Games" href="/boardgames" style="text-decoration: none"><b>this page</b></a>.
           </div>
         </div>
       </div>
@@ -232,8 +235,9 @@
               <li>Docker Management Dashboard</li>
             </ul>
             <p>
-              I've been especially fond of the GitHub clone (<strong><a style="text-decoration: none"
-                  href="https://about.gitea.com/" target="_blank">Gitea</a></strong>) recently.
+              I've been especially fond of the GitHub clone (<strong><a aria-label="About Gitea"
+                  style="text-decoration: none" href="https://about.gitea.com/" target="_blank">Gitea</a></strong>)
+              recently.
             </p>
           </div>
         </div>
