--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -20,7 +20,7 @@
   {% block navbar %}
   <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"></a>
+      <a class="navbar-brand" aria-label="Brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item text-center">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-label="Home" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link" href="/about">About Site</a>
+            <a class="nav-link" aria-label="About Site" href="/about">About Site</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link" href="/docs">API Docs</a>
+            <a class="nav-link" aria-label="API Docs" href="/docs">API Docs</a>
           </li>
         </ul>
       </div>
@@ -51,25 +51,28 @@
       <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
         <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
           <li class="ms-3">
-            <a class="text-body-secondary" href="https://github.com/matthew-ashley-ctl" target="_blank">
+            <a class="text-body-secondary" aria-label="GitHub" href="https://github.com/matthew-ashley-ctl"
+              target="_blank">
               <i class="bi bi-github" style="font-size: 2rem; color: cornflowerblue"></i>
             </a>
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary" href="https://www.linkedin.com/in/matthew-ashley-7b43b286/" target="_blank">
+            <a class="text-body-secondary" aria-label="LinkedIn"
+              href="https://www.linkedin.com/in/matthew-ashley-7b43b286/" target="_blank">
               <i class="bi bi-linkedin" style="font-size: 2rem; color: cornflowerblue"></i>
             </a>
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary" href="https://discordapp.com/users/107259911812960256" target="_blank">
+            <a class="text-body-secondary" aria-label="Discord" href="https://discordapp.com/users/107259911812960256"
+              target="_blank">
               <i class="bi bi-discord" style="font-size: 2rem; color: cornflowerblue"></i>
             </a>
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary" href="mailto:mtashley92@gmail.com">
+            <a class="text-body-secondary" aria-label="Email" href="mailto:mtashley92@gmail.com">
               <i class="bi bi-envelope-fill" style="font-size: 2rem; color: cornflowerblue"></i>
             </a>
           </li>
