Add description meta tag

--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -4,6 +4,7 @@
 <head>
   {% block header %}
   <meta charset="utf-8" />
+  <meta name="description" content="Matthew Ashley portfolio site">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>{% block title %}{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
