Adjust about page spacing below navbar

--- a/app/templates/about.html.j2
+++ b/app/templates/about.html.j2
@@ -1,8 +1,7 @@
 {% extends "base.html.j2" %}
 {% block title %}Borkfolio - About{% endblock %}
 {% block content %}
-<div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
-<div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
+<div class="pt-5"></div>
 
 <div class="row mb-4 justify-content-center">
   <div class="col col-md-10 col-lg-8 col-xxl-6">
