--- a/app/templates/boardgames.html.j2
+++ b/app/templates/boardgames.html.j2
@@ -8,8 +8,7 @@
 {% block title %}Borkfolio - Board Games{% endblock %}
 
 {% block content %}
-<div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
-<div class="mt-md-3 mt-lg-4 mt-xxl-3"></div>
+<div class="pt-5"></div>
 <div class="row mb-5 justify-content-center">
   <div class="col-md-12 col-lg-8">
     <div class="accordion" id="boardgameAccordion">
