Use webp format for images

--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -23,8 +23,8 @@
 
       <div class="card-body">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4 float-end ms-2 mt-auto mb-2">
-          <img src="/static/img/377918962_1051789126002287_4075590018076667559_n.jpg"
-            class="img-fluid rounded float-end" alt="..." />
+          <img src="/static/img/377918962_1051789126002287_4075590018076667559_n.webp"
+            class="img-fluid rounded float-end" alt="Image of Matthew Ashley" />
         </div>
 
         <p>
