--- a/app/templates/boardgames.html.j2
+++ b/app/templates/boardgames.html.j2
@@ -101,6 +101,17 @@
     </div>
   </div>
 </div>
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+  <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <i class="bi bi-octagon-fill rounded me-2"
+        style="font-size: 1rem; color: rgb(179, 10, 10); stroke-width: 5px;"></i>
+      <strong class="me-auto">Error</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body"></div>
+  </div>
+</div>
 {% endblock content %}
 
 {% block scripts %}
