--- a/app/templates/boardgames.html.j2
+++ b/app/templates/boardgames.html.j2
@@ -16,7 +16,7 @@
         <h2 class="accordion-header">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseBgCollection" aria-expanded="false" aria-controls="collapseBgCollection">
-            <i class="bi bi-dice-3-fill me-2" style="font-size: 2rem; color: cornflowerblue"></i>
+            <i class="bi bi-dice-3-fill me-2"></i>
             <h5 class="ms-2 mb-0">See Current Collection</h5>
           </button>
         </h2>
@@ -41,7 +41,7 @@
           <div class="d-block text-center">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseBgSearch" aria-expanded="false" aria-controls="collapseBgSearch">
-              <i class="bi bi-send-plus-fill me-2" style="font-size: 2rem; color: cornflowerblue"></i>
+              <i class="bi bi-send-plus-fill me-2"></i>
               <h5 class="ms-2 mb-0">Recommend A Game</h5>
             </button>
           </div>
@@ -77,7 +77,7 @@
           <div class="d-block text-center">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseBgSuggestions" aria-expanded="false" aria-controls="collapseBgSuggestions">
-              <i class="bi bi-search me-2" style="font-size: 2rem; color: cornflowerblue"></i>
+              <i class="bi bi-search me-2"></i>
               <h5 class="ms-2 mb-0">Peek The Recommendations</h5>
             </button>
           </div>
