--- a/app/templates/index.html.j2
+++ b/app/templates/index.html.j2
@@ -5,7 +5,7 @@
   <div class="mt-5 mt-lg-0"></div>
   <div class="col-sm-12 col-md-9 col-lg-7 col-xxl-6 pt-lg-5">
     <div class="card mx-auto">
-      <h1 class="card-header display-4 fw-normal" style="border-bottom:none">Welcome!</h1>
+      <h1 class="card-header display-4 fw-bolder">Welcome!</h1>
       <div class="card-body" style="padding-bottom:0">
         <h2>My name is Matthew Ashley</h2>
       </div>
@@ -110,7 +110,7 @@
     <div class="card mx-auto" style="width: 12rem">
       <h5 class="card-header text-center">Database</h5>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Microsoft SQL Server</li>
+        <li class="list-group-item">MSSQL</li>
         <li class="list-group-item">MongoDB</li>
         <li class="list-group-item">OracleDB</li>
         <li class="list-group-item">PostgreSQL</li>
@@ -156,7 +156,7 @@
         <h2 class="accordion-header">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseVideoGames" aria-expanded="false" aria-controls="collapseVideoGames">
-            <i class="bi bi-joystick me-2" style="font-size: 2rem; color: cornflowerblue"></i>
+            <i class="bi bi-joystick me-2" style="font-size: 2rem;"></i>
             <h5 class="ms-2 mb-0">Video Games</h5>
           </button>
         </h2>
@@ -186,7 +186,7 @@
         <h2 class="accordion-header">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseBoardGames" aria-expanded="false" aria-controls="collapseBoardGames">
-            <i class="bi bi-dice-3-fill me-2" style="font-size: 2rem; color: cornflowerblue"></i>
+            <i class="bi bi-dice-3-fill me-2" style="font-size: 2rem;"></i>
             <h5 class="ms-2 mb-0">Board Games</h5>
           </button>
         </h2>
@@ -205,7 +205,7 @@
           <div class="d-block text-center">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseHomeLab" aria-expanded="false" aria-controls="collapseHomeLab">
-              <i class="bi bi-tools me-2" style="font-size: 2rem; color: cornflowerblue"></i>
+              <i class="bi bi-tools me-2" style="font-size: 2rem;"></i>
               <h5 class="ms-2 mb-0">Home Lab</h5>
             </button>
           </div>
