--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -3,23 +3,32 @@
 
 <head>
   {% block header %}
-  <meta charset="utf-8" />
-  <meta name="description" content="Matthew Ashley portfolio site">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>{% block title %}{% endblock %}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="/static/css/bootstrap-override.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="/static/css/custom.css" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/static/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/fav/favicon-16x16.png">
+  <link rel="manifest" href="/static/fav/site.webmanifest">
+  <link rel="mask-icon" href="/static/fav/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/static/fav/favicon.ico">
+  <meta charset="utf-8" />
+  <meta name="description" content="Matthew Ashley portfolio site">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/static/fav/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
   {% endblock header %}
 </head>
 
 <body>
 
   {% block navbar %}
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom">
+  <nav class="navbar navbar-expand-md border-bottom" style="font-weight: 500">
     <div class="container-fluid">
       <a class="navbar-brand" aria-label="Brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -52,29 +61,28 @@
       <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
         <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
           <li class="ms-3">
-            <a class="text-body-secondary" aria-label="GitHub" href="https://github.com/matthew-ashley-ctl"
-              target="_blank">
-              <i class="bi bi-github" style="font-size: 2rem; color: cornflowerblue"></i>
+            <a class="" aria-label="GitHub" href="https://github.com/matthew-ashley-ctl" target="_blank">
+              <i class="bi bi-github"></i>
             </a>
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary" aria-label="LinkedIn"
+            <a class="text-body-secondary svg" aria-label="LinkedIn"
               href="https://www.linkedin.com/in/matthew-ashley-7b43b286/" target="_blank">
-              <i class="bi bi-linkedin" style="font-size: 2rem; color: cornflowerblue"></i>
+              <i class="bi bi-linkedin"></i>
             </a>
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary" aria-label="Discord" href="https://discordapp.com/users/107259911812960256"
-              target="_blank">
-              <i class="bi bi-discord" style="font-size: 2rem; color: cornflowerblue"></i>
+            <a class="text-body-secondary svg" aria-label="Discord"
+              href="https://discordapp.com/users/107259911812960256" target="_blank">
+              <i class="bi bi-discord"></i>
             </a>
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary" aria-label="Email" href="mailto:mtashley92@gmail.com">
-              <i class="bi bi-envelope-fill" style="font-size: 2rem; color: cornflowerblue"></i>
+            <a class="text-body-secondary svg" aria-label="Email" href="mailto:mtashley92@gmail.com">
+              <i class="bi bi-envelope-fill"></i>
             </a>
           </li>
         </ul>
