--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -28,7 +28,7 @@
 <body>
 
   {% block navbar %}
-  <nav class="navbar navbar-expand-md border-bottom" style="font-weight: 500">
+  <nav class="navbar navbar-expand-md border-bottom" style="font-weight: 600; rgba(var(--bs-body-color-rgb), 0.04)">
     <div class="container-fluid">
       <a class="navbar-brand" aria-label="Brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
