--- a/app/templates/boardgames.html.j2
+++ b/app/templates/boardgames.html.j2
@@ -53,7 +53,7 @@
               <input type="text" name="name" />
               <input type="submit" value="Search" />
             </form>
-            <table class="table table-striped table-hover accordion-body mb-0">
+            <table class="table table-striped table-hover accordion-body mb-0 mt-3 border">
               <thead>
                 <tr>
                   <th scope="col">#</th>
@@ -83,19 +83,20 @@
           </div>
         </h2>
         <div id="collapseBgSuggestions" class="accordion-collapse collapse">
-          <div class="accordion-body">
-            <table class="table table-striped table-hover accordion-body mb-0">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Year</th>
-                  <th scope="col">Count</th>
-                </tr>
-              </thead>
-              <tbody id="bgSuggestionsTable"></tbody>
-            </table>
-          </div>
+          <table class="table table-striped table-hover accordion-body mb-0">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Year</th>
+                <th scope="col">Count</th>
+              </tr>
+            </thead>
+            <tbody id="bgSuggestionsTable"></tbody>
+          </table>
+          <p class="mb-0 text-center text-muted">
+            Data provided by the BoardGameGeek API
+          </p>
         </div>
       </div>
     </div>
