Remove malformed bg style

--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -28,7 +28,7 @@
 <body>
 
   {% block navbar %}
-  <nav class="navbar navbar-expand-md border-bottom" style="font-weight: 600; rgba(var(--bs-body-color-rgb), 0.04)">
+  <nav class="navbar navbar-expand-md border-bottom" style="font-weight: 600">
     <div class="container-fluid">
       <a class="navbar-brand" aria-label="Brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -61,7 +61,7 @@
       <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
         <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
           <li class="ms-3">
-            <a class="" aria-label="GitHub" href="https://github.com/matthew-ashley-ctl" target="_blank">
+            <a class="" aria-label="GitHub" href="https://github.com/borkmaster12/borkfolio" target="_blank">
               <i class="bi bi-github"></i>
             </a>
           </li>
@@ -81,7 +81,7 @@
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary svg" aria-label="Email" href="mailto:mtashley92@gmail.com">
+            <a class="text-body-secondary svg" aria-label="Email" href="mailto:mtashley92+portfolio@gmail.com">
               <i class="bi bi-envelope-fill"></i>
             </a>
           </li>
