--- a/app/static/css/bootstrap-override.css
+++ b/app/static/css/bootstrap-override.css
@@ -1,5 +1,3 @@
-@import url(//fonts.googleapis.com/css?family=Proxima+Nova);
-
 .list-group-item {
   border: 0;
 }
@@ -30,8 +28,8 @@
   --bs-link-color-rgb: 39, 154, 241;
   --bs-link-opacity: 1;
   --bs-border-width: 0.15rem;
-  --bs-font-sans-serif: "Proxima Nova", system-ui, -apple-system, "Segoe UI",
-    Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-body-font-size: 1.1rem;
   --bs-nav-link-font-weight: 600;
