Use domain email for contact

--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -81,7 +81,7 @@
           </li>
 
           <li class="ms-3">
-            <a class="text-body-secondary svg" aria-label="Email" href="mailto:mtashley92+portfolio@gmail.com">
+            <a class="text-body-secondary svg" aria-label="Email" href="mailto:borkfolio.contact@borkmeister.com">
               <i class="bi bi-envelope-fill"></i>
             </a>
           </li>
